<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Incrementa</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_Menu"/>
    <string name="title_activity_Registrarse"/>
    <string name="title_activity_ReportesClarity"/>
    <string name="acceder">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="user">Usuario:</string>
    <string name="pass">Password:</string>
       <string name="btnReporteClarity">Reportes Clarity</string>
       <string name="btnIngresoIncidentes">Ingreso Incidentes</string>
       <string name="btnMiCuenta">Mi Cuenta</string>
       <string name="btnOtrasSolicitudes">Otras Solicitudes</string>
       <string name="reportesclarity">Reportes Clarity</string>

    <string name="hello">PROBANDO LA INTEGRACION DEL GITHUB</string>
    <string name="Boton">Consumir WS</string>


</resources>
